experiments/97/652202d1e6964d5d7a1c03a257452c7ad95233/error
MESSAGE: Execution of "./build_llvm_project.sh" failed

STDOUT:
[1664/2781] Copying clang's __clang_cuda_runtime_wrapper.h...
[1665/2781] Copying clang's __clang_hip_libdevice_declares.h...
[1666/2781] Copying clang's __clang_hip_math.h...
[1667/2781] Copying clang's __clang_hip_runtime_wrapper.h...
[1668/2781] Copying clang's cetintrin.h...
[1669/2781] Copying clang's cet.h...
[1670/2781] Copying clang's cldemoteintrin.h...
[1671/2781] Copying clang's clzerointrin.h...
[1672/2781] Copying clang's cpuid.h...
[1673/2781] Copying clang's clflushoptintrin.h...
[1674/2781] Copying clang's clwbintrin.h...
[1675/2781] Copying clang's enqcmdintrin.h...
[1676/2781] Copying clang's emmintrin.h...
[1677/2781] Copying clang's f16cintrin.h...
[1678/2781] Copying clang's float.h...
[1679/2781] Copying clang's fma4intrin.h...
[1680/2781] Copying clang's fmaintrin.h...
[1681/2781] Copying clang's fxsrintrin.h...
[1682/2781] Copying clang's gfniintrin.h...
[1683/2781] Copying clang's htmintrin.h...
[1684/2781] Copying clang's htmxlintrin.h...
[1685/2781] Copying clang's ia32intrin.h...
[1686/2781] Copying clang's immintrin.h...
[1687/2781] Copying clang's intrin.h...
[1688/2781] Copying clang's inttypes.h...
[1689/2781] Copying clang's s390intrin.h...
[1690/2781] Copying clang's shaintrin.h...
[1691/2781] Copying clang's smmintrin.h...
[1692/2781] Copying clang's stdalign.h...
[1693/2781] Copying clang's stdarg.h...
[1694/2781] Copying clang's stdatomic.h...
[1695/2781] Copying clang's stdbool.h...
[1696/2781] Copying clang's stddef.h...
[1697/2781] Copying clang's __stddef_max_align_t.h...
[1698/2781] Copying clang's stdint.h...
[1699/2781] Copying clang's stdnoreturn.h...
[1700/2781] Copying clang's tbmintrin.h...
[1701/2781] Copying clang's tgmath.h...
[1702/2781] Copying clang's tmmintrin.h...
[1703/2781] Copying clang's tsxldtrkintrin.h...
[1704/2781] Copying clang's unwind.h...
[1705/2781] Copying clang's vadefs.h...
[1706/2781] Copying clang's vaesintrin.h...
[1707/2781] Copying clang's varargs.h...
[1708/2781] Copying clang's vecintrin.h...
[1709/2781] Copying clang's vpclmulqdqintrin.h...
[1710/2781] Copying clang's waitpkgintrin.h...
[1711/2781] Copying clang's wasm_simd128.h...
[1712/2781] Copying clang's wbnoinvdintrin.h...
[1713/2781] Copying clang's wmmintrin.h...
[1714/2781] Copying clang's __wmmintrin_aes.h...
[1715/2781] Copying clang's __wmmintrin_pclmul.h...
[1716/2781] Copying clang's x86intrin.h...
[1717/2781] Copying clang's xmmintrin.h...
[1718/2781] Copying clang's xopintrin.h...
[1719/2781] Copying clang's xsavecintrin.h...
[1720/2781] Copying clang's xsaveintrin.h...
[1721/2781] Copying clang's xsaveoptintrin.h...
[1722/2781] Copying clang's xsavesintrin.h...
[1723/2781] Copying clang's xtestintrin.h...
[1724/2781] Copying clang's cuda_wrappers/complex...
[1725/2781] Copying clang's cuda_wrappers/algorithm...
[1726/2781] Copying clang's cuda_wrappers/new...
[1727/2781] Copying clang's ppc_wrappers/mmintrin.h...
[1728/2781] Copying clang's ppc_wrappers/xmmintrin.h...
[1729/2781] Copying clang's ppc_wrappers/mm_malloc.h...
[1730/2781] Copying clang's ppc_wrappers/emmintrin.h...
[1731/2781] Copying clang's ppc_wrappers/pmmintrin.h...
[1732/2781] Copying clang's ppc_wrappers/tmmintrin.h...
[1733/2781] Copying clang's ppc_wrappers/smmintrin.h...
[1734/2781] Copying clang's openmp_wrappers/math.h...
[1735/2781] Copying clang's openmp_wrappers/cmath...
[1736/2781] Copying clang's openmp_wrappers/complex.h...
[1737/2781] Copying clang's openmp_wrappers/complex...
[1738/2781] Copying clang's openmp_wrappers/__clang_openmp_device_functions.h...
[1739/2781] Copying clang's openmp_wrappers/new...
[1740/2781] Building arm_fp16.h...
[1741/2781] Copying clang's arm_fp16.h...
[1742/2781] Building arm_sve.h...
[1743/2781] Copying clang's arm_sve.h...
[1744/2781] Building arm_bf16.h...
[1745/2781] Copying clang's arm_bf16.h...
[1746/2781] Building arm_mve.h...
[1747/2781] Copying clang's arm_mve.h...
[1748/2781] Building arm_cde.h...
[1749/2781] Copying clang's arm_cde.h...
[1750/2781] Generating VCSVersion.inc
[1751/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/Cuda.cpp.o
[1752/2781] Building arm_neon.h...
[1753/2781] Copying clang's arm_neon.h...
[1754/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/Attributes.cpp.o
[1755/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/CharInfo.cpp.o
[1756/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/Builtins.cpp.o
[1757/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/CodeGenOptions.cpp.o
[1758/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/Diagnostic.cpp.o
[1759/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/DiagnosticOptions.cpp.o
[1760/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/ExpressionTraits.cpp.o
[1761/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/FileManager.cpp.o
[1762/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/FileSystemStatCache.cpp.o
[1763/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/IdentifierTable.cpp.o
[1764/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/LangOptions.cpp.o
[1765/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/LangStandards.cpp.o
[1766/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/Module.cpp.o
[1767/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/ObjCRuntime.cpp.o
[1768/2781] Building X86GenSubtargetInfo.inc...
[1769/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/OpenMPKinds.cpp.o
[1770/2781] Building CXX object lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o
FAILED: lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o 
CCACHE_CPP2=yes CCACHE_HASHDIR=yes /usr/bin/ccache /usr/bin/c++  -DGTEST_HAS_RTTI=0 -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -Ilib/Passes -I/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes -Iinclude -I/root/llvm-compile-time-tracker/llvm-project/llvm/include -fPIC -fvisibility-inlines-hidden -Werror=date-time -Wall -Wextra -Wno-unused-parameter -Wwrite-strings -Wcast-qual -Wno-missing-field-initializers -pedantic -Wno-long-long -Wimplicit-fallthrough -Wno-maybe-uninitialized -Wno-class-memaccess -Wno-redundant-move -Wno-noexcept-type -Wdelete-non-virtual-dtor -Wsuggest-override -Wno-comment -fdiagnostics-color -ffunction-sections -fdata-sections -O3 -DNDEBUG    -fno-exceptions -fno-rtti -std=c++14 -MD -MT lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -MF lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o.d -o lib/Passes/CMakeFiles/LLVMPasses.dir/StandardInstrumentations.cpp.o -c /root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: In destructor ‘virtual llvm::IRChangePrinter::~IRChangePrinter()’:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:341:46: error: no matching function for call to ‘llvm::IRChangePrinter::~IRChangePrinter()’
  341 |   ChangePrinter<std::string>::~ChangePrinter();
      |                                              ^
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note: candidate: ‘llvm::ChangePrinter<IRUnitT>::~ChangePrinter() [with IRUnitT = std::__cxx11::basic_string<char>]’
  334 | template <typename IRUnitT> ChangePrinter<IRUnitT>::~ChangePrinter<IRUnitT>() {
      |                             ^~~~~~~~~~~~~~~~~~~~~~
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:334:29: note:   candidate expects 1 argument, 0 provided
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp: At global scope:
/root/llvm-compile-time-tracker/llvm-project/llvm/lib/Passes/StandardInstrumentations.cpp:418:2: warning: extra ‘;’ [-Wpedantic]
  418 | };
      |  ^
[1771/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AsmPrinter.cpp.o
[1772/2781] Building CXX object lib/Target/X86/CMakeFiles/LLVMX86CodeGen.dir/X86AvoidTrailingCall.cpp.o
[1773/2781] Building CXX object tools/clang/lib/Basic/CMakeFiles/obj.clangBasic.dir/DiagnosticIDs.cpp.o
[1774/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGAtomic.cpp.o
[1775/2781] Building CXX object tools/clang/lib/CodeGen/CMakeFiles/obj.clangCodeGen.dir/CGBlocks.cpp.o
ninja: build stopped: subcommand failed.


STDERR:
-- Version: 0.0.0
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX
-- Performing Test HAVE_GNU_POSIX_REGEX -- failed to compile
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX
-- Performing Test HAVE_POSIX_REGEX -- success
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK
-- Performing Test HAVE_STEADY_CLOCK -- success
Command exited with non-zero status 1
81.34user 6.78system 0:19.42elapsed 453%CPU (0avgtext+0avgdata 794700maxresident)k
0inputs+1042072outputs (25major+3041777minor)pagefaults 0swaps
